--- a/src/BSourceNotifier.Infrastructure/BSourceNotifier.Infrastructure.csproj
+++ b/src/BSourceNotifier.Infrastructure/BSourceNotifier.Infrastructure.csproj
@@ -16,4 +16,8 @@
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="RazorLight" Version="2.3.1" />
+  </ItemGroup>
+
 </Project>
