--- a/src/BSourceNotifier.Application/BSourceNotifier.Application.csproj
+++ b/src/BSourceNotifier.Application/BSourceNotifier.Application.csproj
@@ -6,7 +6,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="MassTransit" Version="8.2.3" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.2" />
   </ItemGroup>
 
   <PropertyGroup>
